# kaflow-py

./: .gitignore  README.md  main.py  pyproject.toml  server.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  env.example
docs/: api_optimization.md  factory_loop_guide.md  flat_messages_api.md  企业级Agent开发教程(三)基于LangGraph开发低代码 AI Agent 轻量级开发框架 copy.md  企业级Agent开发教程(四)基于MongoDB实现持久化记忆缓存.md
examples/: graph_builder_example.py  graph_demo.py  loop_factory_example.py
src/: __init__.py
src/agents/: __init__.py  agents.py  config.py  exceptions.py  manager.py
src/core/: __init__.py  config_loader.py
src/core/config/: chat_agent.yaml  chat_agent.yaml.template  chat_agent_mcp.yaml.template  chat_agent_tools.yaml.template  chat_browser_agent.yaml  chat_translate_agent.yaml  chat_web_search_agent.yaml  kaflow.yaml.template  multi_agent.yaml.template  multi_loop_agent.yaml.template  ops_agent.yaml  ops_agent.yaml.back
src/core/graph/: __init__.py  auto_builder.py  builder.py  factory.py  graph.py  graph_manager.py  io_resolver.py  models.py  node_factory.py  parser.py  protocol_parser.py  stream.py  stream_processor.py
src/core/model/: __init__.py  agent_models.py  base_models.py  llm_models.py  loop_models.py  memory_models.py  tool_models.py  workflow_models.py  workflow_schema_models.py
src/llms/: __init__.py  config.py  exceptions.py  factory.py  manager.py  providers.py
src/mcp/: __init__.py  mcp.py
src/memory/: __init__.py  base.py  factory.py  memory_checkpointer.py  mongodb_checkpointer.py
src/prompts/: __init__.py  prompt.py
src/server/: app.py  models.py
src/tools/: __init__.py  basic_tools.py  browser_use.py  search.py  ssh.py
src/utils/: __init__.py  config_loader.py  json_utils.py  logger.py  validators.py
tests/: agent_test.py  chat_agent_mcp_test.py  chat_agent_test.py  mcp_test.py  test_api_curl.sh  test_chat_stream_api_curl.sh  test_configs_api_curl.sh  test_mcp_server_metadata_curl.sh  test_memory_api_curl.sh
