[project]
name = "kaflow-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "json-repair>=0.50.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-deepseek>=0.1.4",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "langsmith>=0.4.26",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.10.1",
    "psutil>=5.9.0",
    "pytz>=2023.3",
    "python-multipart>=0.0.20",
    "ragflow-sdk>=0.20.4",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
    "httpx[socks]>=0.28.1",
    "browser-use>=0.7.10",
    "playwright>=1.49.1",
    "duckduckgo-search>=7.4.3",
    "paramiko>=3.5.0",
    "pymongo>=4.10.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]
